// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Peer - Dashboard - Invite Company Modal should render company selection form component and a 'New Company' link when newCompanyFormEnabled is false 1`] = `
<pf-invite-company-modal
  exchange={[Function Object]}
  exchange$={[Function Observable]}
  exchangeCompanyRequesting$={[Function Store]}
  exchangeSubscription={[Function Subscriber]}
  existingCompaniesExchangeRequestModalOpen$={[Function Store]}
  fb={[Function FormBuilder]}
  newCompanyFormEnabled="false"
  requestCompanyForm={[Function FormGroup]}
  sharedPeerStore={[Function Store]}
  store={[Function Store]}
>
  <pf-modal-form
    class="ng-untouched ng-pristine ng-valid"
    title="Invite a Company"
  >
    
    
    
    
    <pf-existing-company-selection-form />
    
    <a
      href="javascript:void(0)"
    >
      New Company
    </a>
  </pf-modal-form>
</pf-invite-company-modal>
`;

exports[`Peer - Dashboard - Invite Company Modal should render new company form component and an 'Existing Companies' link when newCompanyFormEnabled is true 1`] = `
<pf-invite-company-modal
  exchange={[Function Object]}
  exchange$={[Function Observable]}
  exchangeCompanyRequesting$={[Function Store]}
  exchangeSubscription={[Function Subscriber]}
  existingCompaniesExchangeRequestModalOpen$={[Function Store]}
  fb={[Function FormBuilder]}
  newCompanyFormEnabled={[Function Boolean]}
  requestCompanyForm={[Function FormGroup]}
  sharedPeerStore={[Function Store]}
  store={[Function Store]}
>
  <pf-modal-form
    class="ng-untouched ng-pristine ng-valid"
    title="Invite a Company"
  >
    
    
    
    <pf-new-company-form />
    
    
    <a
      href="javascript:void(0)"
    >
      Existing Companies
    </a>
  </pf-modal-form>
</pf-invite-company-modal>
`;
